# voce

./: .gitignore  .golangci.yaml  Dockerfile  Makefile  README.md  README_zh.md  config.yaml.example  docker-compose.gateway.yml  docker-compose.yml  go.mod  go.sum  pre-commit.example
.github/workflows/: ci.yaml
biz/dal/: redis.go
biz/handler/: health.go  machine.go  monitor.go  plugin.go  session.go  web.go  workflow.go
biz/realtime/: grpc.go  handler.go  socket.go
biz/route/: gateway.go  register.go  voce.go
biz/types/: types.go
clients/: assets.go
clients/voce-tui/: Cargo.toml  voce.toml
clients/voce-tui/src/: app.rs  config.rs  main.rs
clients/voce-tui/src/api/: mod.rs
clients/voce-tui/src/audio/: mod.rs
clients/voce-tui/src/common/: events.rs
clients/voce-tui/src/monitor/: mod.rs
clients/voce-tui/src/pages/: chat.rs  mod.rs  monitor_dashboard.rs  property_editor.rs  workflow_list.rs
clients/voce-tui/src/protocol/: mod.rs
clients/voce-tui/src/session/: mod.rs
clients/voce-tui/src/ui/: mod.rs
clients/web/: .gitignore  package.json
cmd/bench/: main.go
cmd/gateway/: init.go  main.go
cmd/voce/: init.go  main.go  server.go
config/: bootstrap.go  config.go  config_test.go
configs/workflows/: a268a51b-be4d-4e86-92df-bf5a0dd2a205.json  dc2c03bd-24b1-4982-bf9d-5446be9b9a91.json
docs/: benchmark.md  gateway.md  key_features.md  plugin.md  plugins_list.md  protocol.md  quick_start.md
examples/: gateway.yaml.example  voce-gateway.yaml.example  voce-standalone.yaml.example
internal/engine/: config.go  engine.go  graph.go  manager.go  (+19 more)
(+105 files in other folders)
