[package]
name = "voce-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.30"
ratatui = "0.26.2"
crossterm = "0.27.0"
cpal = "0.15.3"
ringbuf = "0.4.1"
rustfft = "6.2.0"
bytes = "1.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
webrtc-audio-processing = { version = "0.3.0", features = ["bundled"] }
toml = "0.8"
unicode-width = "0.1.11"
once_cell = "1.19"
